samples/_failures_safe/1761491681_878aa7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c303082.c: In function ‘main’:
./samples/SAFE/__tmp_6c303082.c:169:25: error: missing terminating " character
  169 |         fprintf(stderr, "
      |                         ^
./samples/SAFE/__tmp_6c303082.c:169:9: error: expected expression at end of input
  169 |         fprintf(stderr, "
      |         ^~~~~~~
./samples/SAFE/__tmp_6c303082.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6c303082.c:169:9: error: expected declaration or statement at end of input
